cryptocurrencies added on homepage

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.19.5",
     "axios": "^0.26.1",
     "chartjs": "^0.3.24",
+    "dotenv": "^16.0.0",
     "html-react-parser": "^1.4.10",
     "millify": "^4.0.0",
     "moment": "^2.29.2",
